# PowerSQL

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: bigquery.yml  postgres.yml  rust.yml
ci/: postgres.sh
examples/bigquery/models/: revenue.sql
examples/bigquery/tests/: data_tests.sql
examples/postgres/models/: revenue.sql
examples/postgres/tests/: data_tests.sql
examples/project_1/: powersql.toml
examples/project_1/import_data/: import.py  product_sales.csv
examples/project_1/models/: model.sql  model2.sql  revenue.sql
examples/project_1/tests/: data_tests.sql
src/: execute.rs  main.rs  parser.rs  types.rs  utils.rs
