[package]
name = "powersql"
version = "0.1.7"
authors = ["Daniël Heres <danielheres@gmail.com>"]
edition = "2018"
description = "Data transformation tool using SQL"
license = "MIT"
repository = "https://github.com/Dandandan/PowerSQL"

[dependencies]
sqlparser = "0.5.1"
walkdir = "2"
toml = "0.5"
serde = "1"
serde_derive = "1"
structopt = "0.3"
im = "15"

tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"

[dev-dependencies]
maplit = "1.0"
