[package]
name = "powersql"
version = "0.1.8    "
authors = ["Daniël Heres <danielheres@gmail.com>"]
edition = "2018"
description = "Data transformation tool using SQL"
license = "MIT"
repository = "https://github.com/Dandandan/PowerSQL"

[dependencies]
sqlparser = "0.5.1"
walkdir = "2"
toml = "0.5"
serde = "1"
serde_derive = "1"
structopt = "0.3"
im = "15"

# PostgreSQL
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = "0.5"

# BigQuery
google-bigquery2 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde_json = "^1.0"
yup-oauth2 = "^1.0"

[dev-dependencies]
maplit = "1.0"
